k8s/apps/monitoring/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-web
  annotations:
    cert-manager.io/issuer: "acme"
spec:
  ingressClassName: nginx
  tls:
    -
      hosts:
        - grafana.home.tremoureux.fr
  rules:
  -
    host: grafana.home.tremoureux.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
